<resources>
    <string name="app_name">Dummy Klook</string>
    <string name="the_best_app">The best movie app</string>
    <string name="search">Search</string>
    <string name="top">Top</string>
    <string name="popular">Popular</string>
    <string name="sort_name">Name</string>
    <string name="sort_date">Date</string>
    <string name="sort_our_pick">Our Picks</string>.
    <string name="searching">You are searching</string>
    <string name="no_connection">Please check internet connection</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main Activity</string>
    <string name="testing">testing</string>
    <string name="testing2">testing2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hong_kong">Hong Kong</string>
    <string name="tokyo">Tokyo</string>
    <string name="kyoto">Kyoto</string>
    <string name="singapore">Singapore</string>
    <string name="osaka">Osaka</string>
    <string name="seoul">Seoul</string>
    <string name="taipei">Taipei</string>
    <string name="bangkok">Bangkok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
