<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:title="@string/app_name"
            app:titleEnabled="false"
            app:toolbarId="@+id/toolbar">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="@dimen/text_margin"
                android:shadowColor="@android:color/black"
                android:shadowDx="5.0"
                android:shadowDy="5.0"
                android:shadowRadius="5.0"
                android:text="@string/the_best_app"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_collapseMode="pin"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:id="@+id/cardViewGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="gone">
                <TextView
                    style="@style/CardText"
                    android:text="@string/popular"/>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpagerPopular"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:clipToPadding="false"
                    android:paddingRight="@dimen/card_right_margin"/>

                <TextView
                    style="@style/CardText"
                    android:text="@string/top"/>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpagerTopRate"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:clipToPadding="false"
                    android:paddingRight="@dimen/card_right_margin"/>

                <TextView
                    style="@style/CardText"
                    android:text="@string/sort_name"/>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpagerName"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:clipToPadding="false"
                    android:paddingRight="@dimen/card_right_margin"/>

                <TextView
                    style="@style/CardText"
                    android:text="@string/sort_date"/>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpagerDate"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:clipToPadding="false"
                    android:paddingRight="@dimen/card_right_margin"/>

                <TextView
                    style="@style/CardText"
                    android:text="@string/sort_our_pick"/>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpagerRandom"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:clipToPadding="false"
                    android:paddingRight="@dimen/card_right_margin"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/fab_margin"
        android:clickable="true"
        android:padding="@dimen/text_margin"
        android:tint="@android:color/holo_orange_dark"
        android:src="@drawable/ic_search_black_24dp"
        app:fabSize="normal"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|right|end"/>

    <LinearLayout
        android:id="@+id/actionBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/background_light"
        android:elevation="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/text_margin"
            android:tint="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/ic_explore_black_24dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/text_margin"
            android:tint="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/ic_location_on_black_24dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/text_margin"
            android:tint="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/ic_add_shopping_cart_black_24dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/text_margin"
            android:tint="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/text_margin"
            android:tint="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/ic_account_circle_black_24dp"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
